feat: add lemma export

--- a/corpus/create_tokenized_corpus.ipynb
+++ b/corpus/create_tokenized_corpus.ipynb
@@ -76,6 +76,7 @@
     "from collections import defaultdict\n",
     "from itertools import chain\n",
     "from typing import cast, TypedDict\n",
+    "from utils.corpus import CorpusItem\n",
     "from utils.lemmatize import lemmatize\n",
     "from utils.tokenize import tokenize\n",
     "from tqdm.notebook import tqdm\n",
@@ -90,16 +91,6 @@
     "    text: str\n",
     "    translation: str\n",
     "    label: str\n",
-    "\n",
-    "\n",
-    "class CorpusItem(TypedDict):\n",
-    "    translation: str\n",
-    "    sentence: str\n",
-    "    words: list[str]\n",
-    "    lemmas: list[str]\n",
-    "    features: list[dict[str, str]]\n",
-    "    part_of_speech: list[str]\n",
-    "    glosses: list[list[str]]\n",
     "\n",
     "sentences_by_book: defaultdict[str, list[CorpusItem]] = defaultdict(list)\n",
     "\n",
@@ -299,27 +290,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "\n",
-    "from utils.corpus import RawSentence\n",
+    "import regex as re\n",
+    "from utils.corpus import CorpusItem\n",
     "\n",
     "with open(\"output/annotated_translated_tokenized_corpus_by_book.pkl\", \"rb\") as file:\n",
-    "    corpus: dict[str, list[RawSentence]] = pickle.load(file)\n",
+    "    corpus: dict[str, list[CorpusItem]] = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dictionary of words by book\n",
+    "from utils.tokenize import is_word\n",
+    "words_by_book = {}\n",
+    "for book, sentences in corpus.items():\n",
+    "    words_by_book[book] = [\n",
+    "        word\n",
+    "        for sentence in sentences\n",
+    "        for word in sentence[\"words\"]\n",
+    "        if is_word(word)\n",
+    "    ]\n",
     "\n",
+    "# Create combined words from all books\n",
     "combined_words = [\n",
     "    word\n",
-    "    for _, sentences in corpus.items()\n",
-    "    for sentence in sentences\n",
-    "    for word in sentence[\"words\"]\n",
+    "    for words in words_by_book.values()\n",
+    "    for word in words\n",
     "]\n",
     "\n",
     "SAKHALIN_BOOKS = {\n",
     "    \"からふとのアイヌご（入門）\",\n",
-    "    \"カラフトのアイヌ語（中級）\",\n",
+    "    \"カラフトのアイヌ語（中級）\", \n",
     "    \"カラフトのアイヌ語（初級）\",\n",
     "    \"ニューエクスプレス・スペシャル 日本語の隣人たち I+II\",\n",
     "    \"ピウスツキ記念碑\",\n",
@@ -330,21 +339,18 @@
     "\n",
     "MODERN_WORDS = {\"アイヌタイムズ\", \"プラハ宣言\", \"ウポポイ館内展示\", \"萱野茂の国会演説\"}\n",
     "\n",
+    "# Create combined words from traditional Hokkaido books only\n",
     "combined_words_hokkaido_traditional = [\n",
     "    word\n",
-    "    for book, sentences in corpus.items()\n",
-    "    for sentence in sentences\n",
-    "    for word in sentence[\"words\"]\n",
+    "    for book, words in words_by_book.items()\n",
+    "    for word in words\n",
     "    if book not in SAKHALIN_BOOKS and book not in MODERN_WORDS\n",
-    "]\n",
-    "\n",
-    "for book, sentences in corpus.items():\n",
-    "    flattened_words = [word for sentence in sentences for word in sentence[\"words\"]]"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,6 +383,38 @@
     "    with open(WORDS_BY_BOOK_DIR / f\"{book}.tsv\", \"w\") as f:\n",
     "        for word, count in word_counts.most_common():\n",
     "            f.write(f\"{word}\\t{count}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.tokenize import is_word\n",
+    "\n",
+    "lemmas_by_book = {}\n",
+    "for book, sentences in corpus.items():\n",
+    "    lemmas_by_book[book] = [\n",
+    "        lemma for sentence in sentences for lemma in sentence[\"lemmas\"] if is_word(lemma)\n",
+    "    ]\n",
+    "\n",
+    "combined_lemmas = [\n",
+    "    lemma for lemmas in lemmas_by_book.values() for lemma in lemmas\n",
+    "]\n",
+    "\n",
+    "combined_lemmas_hokkaido_traditional = [\n",
+    "    lemma for book, lemmas in lemmas_by_book.items() for lemma in lemmas\n",
+    "    if book not in SAKHALIN_BOOKS and book not in MODERN_WORDS\n",
+    "]\n",
+    "\n",
+    "with open(\"output/ainu_lemmas_all.tsv\", \"w\") as f:\n",
+    "    for lemma, count in Counter(combined_lemmas).most_common():\n",
+    "        f.write(f\"{lemma}\\t{count}\\n\")\n",
+    "\n",
+    "with open(\"output/ainu_lemmas_hokkaido_traditional.tsv\", \"w\") as f:\n",
+    "    for lemma, count in Counter(combined_lemmas_hokkaido_traditional).most_common():\n",
+    "        f.write(f\"{lemma}\\t{count}\\n\")\n"
    ]
   }
  ],
