feat: filter out invalid characters

--- a/dictionary/generate_combined_glosses.ipynb
+++ b/dictionary/generate_combined_glosses.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,10 @@
       "he\t['～か']\n",
       "i\t['意味的に目的語を補い', 'それ', 'tranverb}}を{{intrverb}}化する']\n",
       "ne\t['～に']\n",
-      "ni\t['木']\n"
+      "ni\t['木']\n",
+      "16567\n",
+      "17124\n",
+      "16441\n"
      ]
     }
    ],
@@ -225,9 +228,44 @@
     "    if i > 10:\n",
     "        break\n",
     "\n",
+    "total_unique_glosses = len(\n",
+    "    set(gloss for glosses in combined_glosses.values() for gloss in glosses)\n",
+    ")\n",
+    "\n",
+    "print(total_unique_glosses)\n",
+    "\n",
+    "import regex\n",
+    "\n",
+    "# combined_glosses = [\n",
+    "#     c for c in combined_glosses if not regex.search(r\"\\|\\{\\}\", c[0])\n",
+    "# ]\n",
+    "\n",
+    "# for item, glosses in combined_glosses.items():\n",
+    "#     for gloss in glosses:\n",
+    "#         if regex.search(r\"[\\|\\{\\}]\", gloss):\n",
+    "#             print(item, gloss)\n",
+    "#         else:\n",
+    "#             filtered_glosses[item].append(gloss)\n",
+    "\n",
+    "filtered_combined_glosses: dict[str, list[str]] = {\n",
+    "    k: [\n",
+    "        gloss\n",
+    "        for gloss in glosses\n",
+    "        if not regex.search(r\"[\\|\\{\\}=]\", string=gloss)\n",
+    "    ]\n",
+    "    for k, glosses in combined_glosses.items()\n",
+    "}\n",
+    "\n",
+    "print(len(filtered_combined_glosses))\n",
+    "\n",
+    "total_unique_filtered_glosses = len(\n",
+    "    set(gloss for glosses in filtered_combined_glosses.values() for gloss in glosses)\n",
+    ")\n",
+    "\n",
+    "print(total_unique_filtered_glosses)\n",
     "\n",
     "with open(OUTPUT_DIR / \"combined_glosses.json\", \"w\") as f:\n",
-    "    json.dump(combined_glosses, f, ensure_ascii=False)"
+    "    json.dump(filtered_combined_glosses, f, ensure_ascii=False)"
    ]
   }
  ],
