feat: update corpus

--- a/corpus/generate_conllu_format.ipynb
+++ b/corpus/generate_conllu_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'VERB'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "433a8b2f86c843e180e90d364f3bff10",
+       "model_id": "51e811cc409c48f1a693aec610c5cebc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,12 +66,18 @@
    ],
    "source": [
     "import pickle\n",
-    "from typing import List, Dict\n",
     "from pathlib import Path\n",
     "from tqdm.notebook import tqdm\n",
+    "from utils.corpus import CorpusItem\n",
+    "\n",
     "\n",
     "def create_conllu_entry(\n",
-    "    token_id: int, form: str, pos_tags: List[str], glosses: List[str]\n",
+    "    token_id: int,\n",
+    "    form: str,\n",
+    "    pos_tags: list[str],\n",
+    "    glosses: list[str],\n",
+    "    features: list[dict[str, str]],\n",
+    "    lemma: list[str],\n",
     ") -> str:\n",
     "    \"\"\"Create a CoNLL-U format line for a token.\"\"\"\n",
     "    # Fields: ID FORM LEMMA UPOS XPOS FEATS HEAD DEPREL DEPS MISC\n",
@@ -83,14 +89,25 @@
     "    xpos = \"|\".join(pos_tags) if pos_tags else \"_\"\n",
     "\n",
     "    # Join glosses for MISC field\n",
-    "    misc = \"Gloss=\" + \"|\".join(glosses) if glosses else \"_\"\n",
     "\n",
-    "    lemma = form # TODO:\n",
+    "    gloss = f\"Gloss={glosses[0]}\" if len(glosses) == 1 else None\n",
+    "\n",
+    "    feat: dict[str, str] | None = features[0] if len(features) == 1 else {}\n",
+    "\n",
+    "    misc = [gloss]\n",
+    "    if feat:\n",
+    "        for key, value in feat.items():\n",
+    "            misc.append(f\"{key}={value}\")\n",
+    "\n",
+    "    misc = [x for x in misc if x]\n",
+    "\n",
+    "    lemm = lemma[0] if len(lemma) == 1 else \"_\"\n",
+    "\n",
     "    # Use '_' for fields we don't have information for\n",
-    "    return f\"{token_id}\\t{form}\\t{lemma}\\t{upos}\\t{xpos}\\t_\\t_\\t_\\t_\\t{misc}\"\n",
+    "    return f\"{token_id}\\t{form}\\t{lemm}\\t{upos}\\t{xpos}\\t{'|'.join(misc)}\\t_\\t_\\t_\\t_\"\n",
     "\n",
     "\n",
-    "def sentence_to_conllu(sentence: Dict) -> str:\n",
+    "def sentence_to_conllu(sentence: CorpusItem) -> str:\n",
     "    \"\"\"Convert a sentence dict to CoNLL-U format string.\"\"\"\n",
     "    # Add sentence metadata\n",
     "    lines = [\n",
@@ -99,16 +116,23 @@
     "    ]\n",
     "\n",
     "    # Add token entries\n",
-    "    for idx, (word, pos_tags, glosses) in enumerate(\n",
-    "        zip(sentence[\"words\"], sentence[\"part_of_speech\"], sentence[\"glosses\"]), start=1\n",
+    "    for idx, (word, pos_tags, glosses, features, lemma) in enumerate(\n",
+    "        zip(\n",
+    "            sentence[\"words\"],\n",
+    "            sentence[\"part_of_speech\"],\n",
+    "            sentence[\"glosses\"],\n",
+    "            sentence[\"features\"],\n",
+    "            sentence[\"lemmas\"],\n",
+    "        ),\n",
+    "        start=1,\n",
     "    ):\n",
-    "        lines.append(create_conllu_entry(idx, word, pos_tags, glosses))\n",
+    "        lines.append(create_conllu_entry(idx, word, pos_tags, glosses, features, lemma))\n",
     "\n",
     "    return \"\\n\".join(lines) + \"\\n\"\n",
     "\n",
     "\n",
     "with open(\"output/annotated_translated_tokenized_corpus_by_book.pkl\", \"rb\") as f:\n",
-    "    sentences_by_book = pickle.load(f)\n",
+    "    sentences_by_book: dict[str, list[CorpusItem]] = pickle.load(f)\n",
     "\n",
     "# Create output directory if it doesn't exist\n",
     "output_dir = Path(\"output/conllu\")\n",
