feat: update ainu-archive word extraction

--- a/dictionary/ainu-archive/extract_words.ipynb
+++ b/dictionary/ainu-archive/extract_words.ipynb
@@ -235,6 +235,34 @@
                     },
                     "metadata": {},
                     "output_type": "display_data"
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Total entries in ../output/ainu-archive/sanitized/a.sanitized.html: 20273\n"
+                    ]
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "b00bbab602bc4a4cb44c99d47c69eb56",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "  0%|          | 0/20273 [00:00<?, ?it/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Total entries in all: 25660\n"
+                    ]
                 }
             ],
             "source": [
@@ -290,7 +318,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 20,
             "metadata": {},
             "outputs": [
                 {
@@ -317,7 +345,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 21,
             "metadata": {},
             "outputs": [
                 {
@@ -348,7 +376,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 22,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -366,7 +394,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 23,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -377,7 +405,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 24,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -392,7 +420,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 80,
+            "execution_count": 25,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -413,7 +441,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 26,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -460,7 +488,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 27,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -471,7 +499,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 28,
             "metadata": {},
             "outputs": [
                 {
@@ -552,7 +580,7 @@
                             "4          エコンラムタナㇰタナㇰ §245．きぜつする（気絶する）；気が遠くなる；気を失う；人事不省になる(12)うつらうつらする[気を失ってから我に返ろうとする前の半意識の状態、ゆめうつつの状態にある](a-)ekonramu-tanak-tanak〔エこンラム･たナㇰタナㇰ〕[a-(我)、e(それについて)、kon(<kor もっている、自分の)、ramu(その心〔が〕]、tanak-tanak(うつらうつらする)>｟サル―ユ研Ⅱ、 p.599｠ （出典：知里人間編I、方言：）  "
                         ]
                     },
-                    "execution_count": 10,
+                    "execution_count": 28,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -570,7 +598,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 29,
             "metadata": {},
             "outputs": [
                 {
@@ -689,7 +717,7 @@
                             "[9362 rows x 2 columns]"
                         ]
                     },
-                    "execution_count": 11,
+                    "execution_count": 29,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -706,7 +734,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 30,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -728,7 +756,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 31,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -737,7 +765,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 32,
             "metadata": {},
             "outputs": [
                 {
@@ -868,7 +896,7 @@
                             "[9362 rows x 3 columns]"
                         ]
                     },
-                    "execution_count": 14,
+                    "execution_count": 32,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -881,7 +909,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 33,
             "metadata": {},
             "outputs": [
                 {
@@ -1004,7 +1032,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 151,
+            "execution_count": 34,
             "metadata": {},
             "outputs": [],
             "source": [
