feat: separate normalize from lemmatize

--- a/corpus/create_tokenized_corpus.ipynb
+++ b/corpus/create_tokenized_corpus.ipynb
@@ -118,13 +118,13 @@
     }
    ],
    "source": [
-    "from utils.lemmatize import clean_lemma\n",
+    "from utils.lemmatize import normalize\n",
     "for text in tqdm(data):\n",
     "    text = cast(Text, text)\n",
     "    words = tokenize(text[\"text\"])\n",
     "    # print(words)\n",
     "\n",
-    "    poses: list[list[str]] = [part_of_speech.get(clean_lemma(w), []) for w in words]\n",
+    "    poses: list[list[str]] = [part_of_speech.get(normalize(w), []) for w in words]\n",
     "    # print(poses)\n",
     "\n",
     "    lemmatized: list[set[tuple[str, frozenset[tuple[str, str]]]]] = []\n",
