feat: combine ConLL-U generation into create_tokenized_corpus

--- a/corpus/create_tokenized_corpus.ipynb
+++ b/corpus/create_tokenized_corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a39ce45bca1e4c28858b9fecdd11ae22",
+       "model_id": "33642ebfdbd34950832cc32832a31794",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
        "dict_keys(['アイヌ語アーカイブ', 'アイヌ語アーカイブ音声資料', 'アイヌ民族文化センター研究紀要', 'アイヌ神謡集', 'アイヌ語鵡川方言日本語‐アイヌ語辞典', '平取町アイヌ口承文芸', 'アイヌタイムズ', 'AA研アイヌ語資料', 'アイヌ語口承文芸コーパス', 'アイヌ語會話字典', '鍋沢元蔵筆録ノート', 'しずないのアイヌご（入門）', 'カムイユカㇻを聞いてアイヌ語を学ぶ', '浅井タケ昔話全集I,II', '北海道立アイヌ民族文化研究センター紀要', 'アイヌ語・アイヌ文化研究の課題', '幌別のアイヌ語（中級）', 'アイヌ語音声資料', '千歳のアイヌ語（中級）', '千徳太郎治のピウスツキ宛書簡', 'からふとのアイヌご（入門）', '石狩川のアイヌ語（中級）', '十勝のアイヌ語（中級）', '沙流のアイヌ語（中級）', 'アイヌ口承文芸テキスト集', '美幌のアイヌ語（中級）', 'いしかりがわのアイヌご（入門）', '千歳のアイヌ語（初級）', '幌別のアイヌ語（初級）', '十勝のアイヌ語（初級）', 'ニューエクスプレスプラス アイヌ語', 'アイヌ語ラジオ講座テキスト', '白沢ナベと小田イトの会話', 'びほろのあいぬご（入門）', 'カラフトのアイヌ語（初級）', 'アイヌ語復興に関わる諸問題', 'とかちのアイヌご（入門）', '第27回アイヌ語弁論大会', 'アコㇿイタㇰ', '美幌のアイヌ語（初級）', 'プラハ宣言', 'さるのアイヌご（入門）', 'ほろべつのアイヌご（入門）', '石狩川のアイヌ語（初級）', '沙流のアイヌ語（初級）', 'カラフトのアイヌ語（中級）', 'ウポポイ館内展示', '静内のアイヌ語（中級）', '静内のアイヌ語（初級）', 'ニューエクスプレス・スペシャル 日本語の隣人たち I+II', '萱野茂の国会演説', 'ちとせのアイヌご（入門）', 'ピウスツキ記念碑'])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,6 +452,167 @@
     "with open(\"output/ainu_lemmas_hokkaido_traditional.tsv\", \"w\") as f:\n",
     "    for lemma, count in Counter(combined_lemmas_hokkaido_traditional).most_common():\n",
     "        f.write(f\"{lemma}\\t{count}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate ConLL-U format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'VERB'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "UPOS_XPOS_MAP = {\n",
+    "    \"VERB\": [\"vi\", \"vd\", \"vc\", \"v\", \"verb\"],\n",
+    "    \"NOUN\": [\"n\", \"nl\", \"nmlz\", \"noun\"],\n",
+    "    \"PRON\": [\"pron\", \"int\"],\n",
+    "    \"PROPN\": [\"propn\"],\n",
+    "    \"DET\": [\"adn\", \"determiner\"],\n",
+    "    \"ADV\": [\"adv\"],\n",
+    "    \"CCONJ\": [\"cconj\"],\n",
+    "    \"SCONJ\": [\"cconj\", \"sconj\", \"padv\"],\n",
+    "    \"POST\": [\"post\"],\n",
+    "    \"AUX\": [\"auxv\", \"cop\"],\n",
+    "    \"PART\": [\"sfp\", \"pers\"],\n",
+    "    \"INTJ\": [\"intj\"],\n",
+    "    \"ADP\": [\"advp\", \"postp\", \"parti\"],\n",
+    "    \"NUM\": [\"num\"],\n",
+    "    \"PUNCT\": [\"punct\"],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def generate_upos_from_xpos(xpos: str) -> str:\n",
+    "    \"\"\"Generate UPOS from XPOS using the reverse mapping.\"\"\"\n",
+    "    reverse_map = {x: upos for upos, xposes in UPOS_XPOS_MAP.items() for x in xposes}\n",
+    "    return reverse_map.get(xpos, \"_\")\n",
+    "\n",
+    "\n",
+    "generate_upos_from_xpos(\"vi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa1274521af540b8bbf8b8d63d637da4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/53 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "from pathlib import Path\n",
+    "from tqdm.notebook import tqdm\n",
+    "from utils.corpus import CorpusItem\n",
+    "\n",
+    "\n",
+    "def create_conllu_entry(\n",
+    "    token_id: int,\n",
+    "    form: str,\n",
+    "    pos_tags: list[str],\n",
+    "    glosses: list[str],\n",
+    "    features: list[dict[str, str]],\n",
+    "    lemma: list[str],\n",
+    ") -> str:\n",
+    "    \"\"\"Create a CoNLL-U format line for a token.\"\"\"\n",
+    "    # Fields: ID FORM LEMMA UPOS XPOS FEATS HEAD DEPREL DEPS MISC\n",
+    "\n",
+    "    # Use first POS tag as UPOS if available, otherwise '_'\n",
+    "    upos = generate_upos_from_xpos(pos_tags[0]) if pos_tags else \"_\"\n",
+    "\n",
+    "    # Join all POS tags for XPOS\n",
+    "    xpos = \"|\".join(pos_tags) if pos_tags else \"_\"\n",
+    "\n",
+    "    # Join glosses for MISC field\n",
+    "\n",
+    "    gloss = f\"Gloss={glosses[0]}\" if len(glosses) == 1 else None\n",
+    "\n",
+    "    feat: dict[str, str] | None = features[0] if len(features) == 1 else {}\n",
+    "\n",
+    "    misc = [gloss]\n",
+    "    if feat:\n",
+    "        for key, value in feat.items():\n",
+    "            misc.append(f\"{key}={value}\")\n",
+    "\n",
+    "    misc = [x for x in misc if x]\n",
+    "\n",
+    "    lemm = lemma[0] if len(lemma) == 1 else \"_\"\n",
+    "\n",
+    "    # Use '_' for fields we don't have information for\n",
+    "    return f\"{token_id}\\t{form}\\t{lemm}\\t{upos}\\t{xpos}\\t{'|'.join(misc)}\\t_\\t_\\t_\\t_\"\n",
+    "\n",
+    "\n",
+    "def sentence_to_conllu(sentence: CorpusItem) -> str:\n",
+    "    \"\"\"Convert a sentence dict to CoNLL-U format string.\"\"\"\n",
+    "    # Add sentence metadata\n",
+    "    lines = [\n",
+    "        \"# text = \" + sentence[\"sentence\"],\n",
+    "        \"# translation = \" + sentence[\"translation\"],\n",
+    "    ]\n",
+    "\n",
+    "    # Add token entries\n",
+    "    for idx, (word, pos_tags, glosses, features, lemma) in enumerate(\n",
+    "        zip(\n",
+    "            sentence[\"words\"],\n",
+    "            sentence[\"part_of_speech\"],\n",
+    "            sentence[\"glosses\"],\n",
+    "            sentence[\"features\"],\n",
+    "            sentence[\"lemmas\"],\n",
+    "        ),\n",
+    "        start=1,\n",
+    "    ):\n",
+    "        lines.append(create_conllu_entry(idx, word, pos_tags, glosses, features, lemma))\n",
+    "\n",
+    "    return \"\\n\".join(lines) + \"\\n\"\n",
+    "\n",
+    "\n",
+    "with open(\"output/annotated_translated_tokenized_corpus_by_book.pkl\", \"rb\") as f:\n",
+    "    sentences_by_book: dict[str, list[CorpusItem]] = pickle.load(f)\n",
+    "\n",
+    "# Create output directory if it doesn't exist\n",
+    "output_dir = Path(\"output/conllu\")\n",
+    "output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Process each book\n",
+    "for book_title, sentences in tqdm(list(sentences_by_book.items())):\n",
+    "    # Create sanitized filename\n",
+    "    filename = \"\".join(c for c in book_title if c.isalnum() or c in (\" \", \"-\"))\n",
+    "    filename = filename.replace(\" \", \"_\") + \".conllu\"\n",
+    "\n",
+    "    # Write CoNLL-U file\n",
+    "    with open(output_dir / filename, \"w\", encoding=\"utf-8\") as f:\n",
+    "        for sentence in sentences:\n",
+    "            f.write(sentence_to_conllu(sentence))\n",
+    "            f.write(\"\\n\")  # Add blank line between sentences\n",
+    "\n",
+    "    # break"
    ]
   }
  ],
