feat: add word inspection

--- a/corpus/inspect_tokenized_corpus.ipynb
+++ b/corpus/inspect_tokenized_corpus.ipynb
@@ -2724,13 +2724,15 @@
     "import regex as re\n",
     "from utils.lemmatize import lemmatize\n",
     "\n",
-    "with open(\"output/ainu_words_hokkaido_traditional.tsv\", \"r\") as f:\n",
-    "    reader = list(csv.reader(f, delimiter=\"\\t\"))\n",
-    "    for row in reader:\n",
-    "        lemma, features = lemmatize(row[0])\n",
-    "        if not re.match(r\"^[a-zA-Z0-9=\\_]+$\", lemma):\n",
-    "            print(row, lemma, features)\n",
-    "\n"
+    "# for sentence in joined_corpus[:10]:\n",
+    "#     print(sentence)\n",
+    "\n",
+    "# with open(\"output/ainu_words_hokkaido_traditional.tsv\", \"r\") as f:\n",
+    "#     reader = list(csv.reader(f, delimiter=\"\\t\"))\n",
+    "#     for row in reader:\n",
+    "#         lemma, features = lemmatize(row[0])\n",
+    "#         if not re.match(r\"^[a-zA-Z0-9=\\_]+$\", lemma):\n",
+    "#             print(row, lemma, features)"
    ]
   },
   {
@@ -3171,6 +3173,76 @@
     "for sentence in joined_corpus:\n",
     "    if \"inkar'\" in sentence[\"sentence\"]:\n",
     "        print(sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspect words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ôzyo\n",
+      "ônâ\n",
+      "ôbaku\n",
+      "ôke\n",
+      "âru\n",
+      "ôkesutora\n",
+      "ôsugite\n",
+      "ôtobai\n",
+      "ôsyokubudôkyûkin\n",
+      "ê\n",
+      "ô\n",
+      "ôshoku-\n",
+      "ôya-\n",
+      "ôtyo\n",
+      "ôbakurin\n",
+      "15\n",
+      "âru\n",
+      "ê\n",
+      "ô\n",
+      "ôbaku\n",
+      "ôbakurin\n",
+      "ôke\n",
+      "ôkesutora\n",
+      "ônâ\n",
+      "ôshoku-\n",
+      "ôsugite\n",
+      "ôsyokubudôkyûkin\n",
+      "ôtobai\n",
+      "ôtyo\n",
+      "ôya-\n",
+      "ôzyo\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import regex as re\n",
+    "\n",
+    "with open(\n",
+    "    \"./output/ainu_words_hokkaido_traditional.tsv\", \"r\", encoding=\"utf-8\"\n",
+    ") as f:\n",
+    "    csv_reader = csv.reader(f, delimiter=\"\\t\")\n",
+    "    lines = [row for row in csv_reader]\n",
+    "\n",
+    "with_long_vowel = set()\n",
+    "for line in lines:\n",
+    "    if re.match(r\"[âîûêô]\", line[0]):\n",
+    "        print(line[0])\n",
+    "        with_long_vowel.add(line[0])\n",
+    "print(len(with_long_vowel))\n",
+    "for word in sorted(with_long_vowel):\n",
+    "    print(word)\n"
    ]
   }
  ],
