--- a/dictionary/generate_combined_part_of_speech.ipynb
+++ b/dictionary/generate_combined_part_of_speech.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -356,18 +356,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Save combined POS data\n",
         "with open(OUTPUT_DIR / \"combined_part_of_speech.json\", \"w\") as f:\n",
-        "    json.dump(combined_pos, f, ensure_ascii=False, indent=2)"
+        "    json.dump(combined_pos, f, ensure_ascii=False, indent=2)\n",
+        "\n",
+        "with open(\"../utils/src/utils/data/combined_part_of_speech.json\", \"w\") as f:\n",
+        "    json.dump(combined_pos, f, ensure_ascii=False, indent=2)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
