feat: update combined_part_of_speech

--- a/dictionary/generate_combined_part_of_speech.ipynb
+++ b/dictionary/generate_combined_part_of_speech.ipynb
@@ -211,9 +211,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Manual: 2\n",
+            "Manual: 12\n",
             "k=\t['pers']\n",
-            "c=\t['pers']\n"
+            "c=\t['pers']\n",
+            "taa\t['adv']\n",
+            "konno\t['sconj']\n",
+            "u\t['intj']\n",
+            "hawki\t['vi']\n",
+            "teh\t['sconj']\n",
+            "yupo\t['n']\n",
+            "sapo\t['n']\n",
+            "sirkunpato\t['intj']\n",
+            "ike\t['nmlz']\n",
+            "neya\t['adn']\n"
           ]
         }
       ],
